<resources>
    <string name="app_name">Hotel</string>

    <string name="currency_rus">₽</string>

    <string name="hotel_title">Отель</string>
    <string name="hotel_about_hotel">Об отеле</string>
    <string name="most_necessary">Самое необходимое</string>
    <string name="conveniences">Удобства</string>
    <string name="what_included">Что включено</string>
    <string name="what_not_included">Что не включено</string>
    <string name="btn_on_number_change">К выбору номера</string>
    <string name="btn_change_number">Выбрать номер</string>
    <string name="reservation_title_name">Бронирование</string>
    <string name="add_new_client">Добавить туриста</string>
    <string name="phone_title">Номер телефона</string>
    <string name="mail_title">Почта</string>
    <string name="about_num_and_mail_disc">Эти данные никому не передаются. После оплаты, мы вышлем вам чек на указанный вами номер и почту</string>
    <string name="title_name">Имя</string>
    <string name="last_name_title">Фамилия</string>
    <string name="success_body1">Ваш заказ приняли в работу</string>
    <string name="succes_body_half1">Подтверждение заказа №</string>
    <string name="success_body_half2">может занять некоторое время (от 1 часа до суток). Как только мы получим ответ от туроператора, вам на почту придет уведомление.</string>
    <string name="ok">Супер!</string>
</resources>